<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b2"
    android:orientation="vertical"
    tools:context="com.example.android.quizappnd.question2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:scrollbarSize="3dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbarThumbVertical="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/what"
                android:theme="@style/MyTextViewQuestions" />

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/one"
                android:theme="@style/MyCheckBoxes" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/two"
                android:theme="@style/MyCheckBoxes" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/three"
                android:theme="@style/MyCheckBoxes" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/four"
                android:theme="@style/MyCheckBoxes" />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/five"
                android:theme="@style/MyCheckBoxes" />

            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/six"
                android:theme="@style/MyCheckBoxes" />

            <Button
                android:id="@+id/next2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/next"
                android:theme="@style/MyButton" />

            <TextView
                android:id="@+id/plName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
