<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b3"
    android:orientation="vertical"
    tools:context="com.example.android.quizappnd.question1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:scrollbarSize="3dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbarThumbVertical="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="8dp"
                android:text="@string/question1"
                android:theme="@style/MyTextViewQuestions" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:theme="@style/MyRadioButton">

                <RadioButton
                    android:id="@+id/answerA1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/a1" />

                <RadioButton
                    android:id="@+id/answerB1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/b1" />

                <RadioButton
                    android:id="@+id/answerC1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/c1" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="#8bc34a" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/question2"
                android:theme="@style/MyTextViewQuestions" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:theme="@style/MyRadioButton">

                <RadioButton
                    android:id="@+id/answerA2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/a2" />

                <RadioButton
                    android:id="@+id/answerB2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/b2" />

                <RadioButton
                    android:id="@+id/answerC2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/c2" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="#8bc34a" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/question3"
                android:theme="@style/MyTextViewQuestions" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:theme="@style/MyRadioButton">

                <RadioButton
                    android:id="@+id/answerA3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/a3" />

                <RadioButton
                    android:id="@+id/answerB3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/b3" />

                <RadioButton
                    android:id="@+id/answerC3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/c3" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="#8bc34a" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/question4"
                android:theme="@style/MyTextViewQuestions" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:theme="@style/MyRadioButton">

                <RadioButton
                    android:id="@+id/answerA4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/a4" />

                <RadioButton
                    android:id="@+id/answerB4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/b4" />

                <RadioButton
                    android:id="@+id/answerC4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/c4" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="#8bc34a" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/question5"
                android:theme="@style/MyTextViewQuestions" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:theme="@style/MyRadioButton">

                <RadioButton
                    android:id="@+id/answerA5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/a5" />

                <RadioButton
                    android:id="@+id/answerB5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/b5" />

                <RadioButton
                    android:id="@+id/answerC5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/c5" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="#8bc34a" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/question6"
                android:theme="@style/MyTextViewQuestions" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:theme="@style/MyRadioButton">

                <RadioButton
                    android:id="@+id/answerA6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/a6" />

                <RadioButton
                    android:id="@+id/answerB6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/b6" />

                <RadioButton
                    android:id="@+id/answerC6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/c6" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="#8bc34a" />

            <Button
                android:id="@+id/next1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/next"
                android:theme="@style/MyButton" />

            <TextView
                android:id="@+id/pName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>