<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b3"
    android:orientation="vertical"
    tools:context="com.example.android.quizappnd.question3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:scrollbarSize="3dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbarThumbVertical="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/multi"
                android:textSize="20sp"
                android:theme="@style/MyTextViewQuestions" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/open1a"
                    android:theme="@style/FillInAnswers" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:text="@string/open1q"
                    android:theme="@style/FillInTextView" />
            </LinearLayout>

            <EditText
                android:id="@+id/correctAnswer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/writeAnswer"
                android:theme="@style/MyEditText" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/open2a"
                    android:theme="@style/FillInAnswers" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:text="@string/open2q"
                    android:theme="@style/FillInTextView" />
            </LinearLayout>

            <EditText
                android:id="@+id/correctAnswer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/writeAnswer"
                android:theme="@style/MyEditText" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/open3a"
                    android:theme="@style/FillInAnswers" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:text="@string/open3q"
                    android:theme="@style/FillInTextView" />
            </LinearLayout>

            <EditText
                android:id="@+id/correctAnswer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/writeAnswer"
                android:theme="@style/MyEditText" />

            <Button
                android:id="@+id/next3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/submit"
                android:theme="@style/MyButton" />

            <TextView
                android:id="@+id/plaName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
